--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vs64",
 	"displayName": "vs64",
 	"description": "VS64 - The C64 Development Environment",
-	"version": "0.1.3",
+	"version": "0.1.4",
 	"preview": true,
 	"publisher": "rosc",
 	"license": "GPL-3.0",
@@ -81,14 +81,20 @@
 					".a",
 					".h"
 				],
-				"configuration": "./syntaxes/language-configuration.json"
+				"configuration": "./language/asm.language.json"
 			}
 		],
 		"grammars": [
 			{
 				"language": "asm",
 				"scopeName": "source.asm",
-				"path": "./syntaxes/asm.tmLanguage.json"
+				"path": "./language/asm.grammar.json"
+			}
+		],
+		"snippets": [
+			{
+				"language": "asm",
+				"path": "./language/asm.snippets.json"
 			}
 		],
 		"configuration": {
@@ -112,12 +118,12 @@
 				},
 				"c64.assemblerPath": {
 					"type": "string",
-					"default": "",
+					"default": "acme",
 					"description": "Path to assembler executable"
 				},
 				"c64.emulatorPath": {
 					"type": "string",
-					"default": "",
+					"default": "x64",
 					"description": "Path to emulator executable"
 				},
 				"c64.debuggerEnabled": {
@@ -127,7 +133,7 @@
 				},
 				"c64.debuggerPath": {
 					"type": "string",
-					"default": "",
+					"default": "c64debugger",
 					"description": "Path to C64 debugger executable"
 				}
 			}
