--- a/package.json
+++ b/package.json
@@ -106,6 +106,11 @@
 					"default": false,
 					"description": "Flag to enable verbose output of extension"
 				},
+				"c64.definitions": {
+					"type": "string",
+					"default": "",
+					"description": "Comma-separated list of symbols to define, e.g. A=1,B=4"
+				},
 				"c64.autoBuild": {
 					"type": "boolean",
 					"default": true,
