Update version number and changelog

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "vs64",
 	"displayName": "vs64",
 	"description": "VS64 - The C64 Development Environment",
-	"version": "0.1.10",
+	"version": "0.1.11",
 	"preview": true,
 	"publisher": "rosc",
 	"license": "GPL-3.0",
@@ -212,6 +212,7 @@
 	},
 	"dependencies": {
 		"await-notify": "^1.0.1",
+		"vsce": "^1.74.0",
 		"vscode-debugadapter": "^1.36.0"
 	}
 }
