--- a/examples/asm/project-config.json
+++ b/examples/asm/project-config.json
@@ -5,7 +5,7 @@
     "main": "src/main.asm",
     "build": "debug",
     "definitions": [],
-    "includes": ["src/includes"],
+    "includes": ["src/includes", "resources"],
     "args": [],
     "compiler": ""
 }
