alpha 3 changes - added getting started view - added extension and project setup commands - added expression resolver - added support for watch expressions - added project templates - improved examples - bug fixes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -42,6 +42,13 @@
             "cwd": "${workspaceFolder}/test"
         },
         {
+            "name": "Run Expression Resolver",
+            "type": "node",
+            "request": "launch",
+            "program": "${workspaceFolder}/test/expr.run.js",
+            "cwd": "${workspaceFolder}/test"
+        },
+        {
             "name": "Run DebugInfo",
             "type": "node",
             "request": "launch",
