--- a/resources/templates/project-config.json
+++ b/resources/templates/project-config.json
@@ -5,7 +5,7 @@
     "main": "src/main.asm",
     "build": "debug",
     "definitions": [],
-    "includes": ["lib64/include", "resources"],
+    "includes": [],
     "args": [],
     "compiler": ""
 }
